[Fix][Ian] change z-index to let navbar work with background-dim

--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -42,7 +42,7 @@
   }
 
   .background-dim {
-    @apply fixed top-0 left-0 h-screen w-screen bg-black z-30 opacity-10;
+    @apply fixed top-0 left-0 h-screen w-screen bg-black opacity-10;
   }
 }
 
